--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -57,3 +57,7 @@ layout: default
     {% elsif page.color %}background-image: url('{{ site.color_image | relative_url }}');  {% endif %}
   }
 </style>
+
+<script type="text/javascript" async
+  src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
+</script>
